// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<button
  className="c0"
  disabled={false}
>
  <img
    className="c1"
    src="presentation.svg"
  />
</button>
`;

exports[`renders correctly with tooltip 1`] = `
<Tooltip
  arrow={true}
  content="Test"
>
  <button
    className="c0"
    disabled={false}
  >
    <img
      className="c1"
      src="share.svg"
    />
  </button>
</Tooltip>
`;
